# synapse-ai-seos

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
.synapse/: mcp_servers.json
app/: config.py  main.py
app/api/v1/: router.py  tasks.py
app/auth/: __init__.py  dependencies.py  exceptions.py  schemas.py  service.py
app/core/: config.py  enums.py  logging.py
app/db/: init_db.py  models.py  session.py
app/middleware/: logging.py  request_context_logger.py  request_logging.py
app/models/: task.py
app/repositories/: backlog_repository.py  task_repository.py
app/routes/: backlog.py  users.py
app/schemas/: error.py
app/services/: backlog_service.py
frontend/: app.js  index.html  styles.css
k8s/: deployment.yml  service.yml
tests/: conftest.py  test_app_factory.py  test_auth.py  test_backlog_auth.py  test_db_inmemory_behavior.py  test_error_handlers.py  test_errors.py  test_main.py  test_main_app.py  test_main_app_bootstrap.py  test_middleware_logging.py  test_tasks_api.py  test_users_me.py  test_validation.py
tests/integration/: test_openapi_contract.py  test_tasks_api.py
tests/unit/: test_logging_middleware.py  test_schemas.py  test_task_service.py
