[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-ai-seos"
version = "0.1.0"
description = "FastAPI backlog task management API with modular architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "sqlalchemy==2.0.35",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "httpx==0.27.2",
  "ruff==0.6.8",
  "black==24.8.0",
  "mypy==1.11.2",
  "types-requests==2.32.0.20240914"
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
plugins = []
exclude = ["tests/"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
