[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-ai-seos"
version = "0.1.0"
description = "FastAPI service with JWT auth"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.23.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "PyJWT>=2.8.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.26.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
